Сделал отдельную валидацию пользователя по 4м полям, добавил проверку try catch при создании юзера, поправил сеты работ и адресов на Set.of(), исправил модификаторы доступа + вынес предельный возраст 18 в константу, отформатировал отступы